# striga

./: .gitignore  CMakeLists.txt  README.md  main.cpp  striga.h
